<resources>
    <string name="app_name">PopMovieApp</string>
    <string name="interstellar">interstellar</string>
    <string name="image">Image</string>
    <string name="poster">Poster</string>
    <string name="interstellar_overview">Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage.</string>
    <string name="release_date">2014</string>
    <string name="rateing">9.0</string>
    <string name="overview">Overview</string>
    <string name="rate">Rate</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="refresh">Refresh</string>
</resources>
